# notion-anime-bot

./: .config  .gitignore  anime_parser.py  config.ini.example  flask_app.py  logging.conf  main.py  my_notion.py  notion.py  package.json  parser.py  pkg.txt  pyproject.toml  requirements.txt  start.sh  utils.py
OLD/: notion.py
anime_parser/: __init__.py  shikimori.py
examples/: little_bot.py  notion_test.py  webhook_example.py
model/: jutsu.py  notion_model.py  shikimori.py
nlogger/: __init__.py
