[tool.poetry]
name = "notion-bot"
version = "0.1.0"
description = ""
authors = ["Орлов Ярослав <orlov.avis@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.19"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"
notion = "^0.0.28"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
